# bevy_slimy_widgets

./: Cargo.toml  LICENSE  README.md
examples/: progress_bar.rs  text_input.rs
src/: bundles.rs  lib.rs
src/widgets/: mod.rs  progress_bar.rs  text_input.rs
