[package]
name = "bevy_slimy_widgets"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/Sliman4/bevy_slimy_widgets"
homepage = "https://github.com/Sliman4/bevy_slimy_widgets#readme"
documentation = "https://docs.rs/bevy_slimy_widgets"
description = "Cool bevy_ui widgets"
categories = ["game-development", "gui"]
keywords = ["gamedev", "ui", "gui", "bevy"]

[dependencies]
bevy = { version = "0.7", default-features = false, features = [ "bevy_ui", "render" ] }
clipboard = "0.5.0"
ab_glyph = "0.2.15"
glyph_brush = "0.7.3"

[dev-dependencies]
bevy = "0.7"

[[example]]
name = "progress_bar"
path = "examples/progress_bar.rs"

[[example]]
name = "text_input"
path = "examples/text_input.rs"
